# lmadb

./: .gitmodules  CMakeLists.txt  TODO.txt  build.sh  requirements.txt
ext/: CMakeLists.txt
include/lmadb/lmadb/: lmadb.h
libs/: CMakeLists.txt
libs/ast/: CMakeLists.txt
libs/ast/include/ast/: ast.hpp  parse_statement.hpp
libs/ast/src/: parse_statement.cpp
libs/cxx/: CMakeLists.txt
libs/cxx/include/cxx/: define_exception.hpp  filesystem.hpp  for_each_member.hpp  to_tuple.hpp  type_traits.hpp  variant_cat.hpp
libs/cxx/include/cxx/adt/: const_str.hpp  persistent_flat_map.hpp  persistent_vector.hpp
libs/lmadb/: CMakeLists.txt
libs/lmadb/src/: ast.hpp  connection.cpp  connection.hpp  lmadb.cpp  parse_statement.cpp  parse_statement.hpp  statement.cpp  statement.hpp
libs/meta/: CMakeLists.txt
libs/meta/include/meta/: column_metadata_vector.hpp  reader.hpp  table_desc.hpp  table_metadata_map.hpp  writer.hpp
libs/meta/src/: column_metadata_map.hpp  reader.cpp  table_metadata_map.hpp  writer.cpp
libs/pdk/: CMakeLists.txt
libs/pdk/include/pdk/: pdk.hpp
libs/pylmadb/: CMakeLists.txt
libs/pylmadb/src/: pylmadb.cpp  setup.py
libs/storage/: CMakeLists.txt
libs/storage/include/storage/column/: column_vector.hpp  insert.hpp  validate.hpp
libs/storage/src/: insert.cpp  validate.cpp
test/: CMakeLists.txt
test/ast/: CMakeLists.txt  test_parse_statement.cpp
test/cxx/: CMakeLists.txt  test_variant_cat.cpp
test/cxx/adt/: CMakeLists.txt  test_persistent_flat_map.cpp  test_persistent_vector.cpp
test/lmadb/: CMakeLists.txt  test_c_api.c  test_parse_statement.cpp
test/pdk/: CMakeLists.txt  test_pdk.cpp
test/storage/: CMakeLists.txt
test/storage/column/: CMakeLists.txt  test_column_insert.cpp  test_column_validate.cpp
test/testlib/: CMakeLists.txt
test/testlib/include/testlib/: tmp_dir_fixture.hpp
test/tools/: CMakeLists.txt
test/tools/fcheck/: CMakeLists.txt  fcheck_check_next_not_next.sh  fcheck_check_not_found.sh  fcheck_command_fails.sh  test_fcheck.sh
test/tools/lmadb/: CMakeLists.txt  create_table.sql  insert_into.sql  unknown_meta_command.sql
tools/: fcheck  lmadb
